--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ course_description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Na
 course_semester: "Fall 1998"
 
 baseurl: "/jekyll-course-website-template" # the subpath of your site, e.g. /blog/
-url: "https://kaisquare-umbc.github.io/KAIsquare-UMBC/" # the base hostname & protocol for your site
+url: "https://kaisquare-umbc.github.io/" # the base hostname & protocol for your site
 
 schoolname: "Hogwarts"
 schoolurl: "https://hogwarts.edu"
