--- a/_data/people.yml
+++ b/_data/people.yml
@@ -7,7 +7,7 @@ instructors:
 
 teaching_assistants:
   - name: To be decided
-   # profile_pic: /_images/pp/potter.jpg
+   profile_pic: /_images/robo.jpg
     #webpage: https://en.wikipedia.org/wiki/Harry_Potter_(character)
 
   #- name: Hermione Granger
