--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-course_name: History of Magic
+course_name: KAI Square
 course_description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare aliquam mattis. Donec hendrerit sollicitudin urna. Aliquam venenatis rutrum velit, at lobortis dui cursus a. Nam varius metus in turpis maximus, ut rhoncus tellus dictum. In aliquam tortor nec mi dapibus, sit amet vehicula dolor auctor."
-course_semester: "Fall 1998"
+course_semester: "Fall 2022"
 
 baseurl: "/KAIsquare-UMBC" # the subpath of your site, e.g. /blog/
 url: "https://kaisquare-umbc.github.io/" # the base hostname & protocol for your site
